--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,19 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f6f4ff;
+}
+
+@theme {
+  --color-primary: #6a49f3;
+  --color-secondary: #391e6c;
+  --color-gray: #3e3f66;
+  --color-light-purple: #f6f4ff;
+  --color-dark-purple: #32236f;
+  --color-orange: #ff956b;
+  --color-light-black: #212529;
+  --breakpoint-sm: 600;
+  --breakpoint-md: 960;
+  --breakpoint-lg: 1280;
+  --breakpoint-xl: 1440;
 }
