feat: popular platform section added

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@ body {
   --color-dark-purple: #32236f;
   --color-orange: #ff956b;
   --color-light-black: #212529;
+  --color-pale-blue: #f1eff7;
   --breakpoint-sm: 600;
   --breakpoint-md: 960;
   --breakpoint-lg: 1280;
