--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@ body {
   --color-orange: #ff956b;
   --color-light-black: #212529;
   --color-pale-blue: #f1eff7;
+  --color-purple-secondary: #6a49f2;
   --breakpoint-sm: 600;
   --breakpoint-md: 960;
   --breakpoint-lg: 1280;
