--- a/app/components/navbar/navbar.module.css
+++ b/app/components/navbar/navbar.module.css
@@ -3,23 +3,12 @@
   backdrop-filter: blur(10px);
 }
 
-.test {
-  max-width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
-
-  width: 100%;
-  z-index: 1000;
-}
-
-.test ul {
-  display: flex;
-  align-items: center;
-}
-
 .test li a {
   padding: 5px 16px;
   color: #3e3f66;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27px;
 }
 
 .icon_style {
